--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -4,57 +4,35 @@
     <h1 class="display-5 text-center">Majstrovstvá Topoľčian v tenise</h1>
 
     <h3 class="text-center pt-5">
-      Súťaž je určená pre každého, kto si chce zahrať tenis s vyrovnanými súpermi počas celej sezóny,
-      na ktorýchkoľvek kurtoch v Topoľčanoch.
+      Súťaž je určená pre každého, kto si chce zahrať tenis s vyrovnanými súpermi
+      počas celej letnej sezóny, na ktorýchkoľvek kurtoch v Topoľčanoch.
     </h3>
 
     <hr>
     <h4 class="text-center pt-5">Princíp súťaže</h4>
     <p class="text-justify">
-      Základná časť majstrovstiev pozostáva z minimálne deviatich hracích kol, pričom každé kolo trvá dva týždne.
-      Jednotlivé kolá základnej časti súťaže sa žrebujú <a href="#swiss-tossing-system">švajčiarskym systémom</a> (vysvetlené nižšie),
-      ktorý zabezpečí, že väčšinu zápasov súťaže hrajú lepší hráči s lepšími, strední so strednými a slabší so slabšími.
+      Základná časť majstrovstiev pozostáva z minimálne deviatich hracích kol,
+      pričom každé kolo trvá dva týždne.
+      Jednotlivé kolá základnej časti súťaže sa žrebujú
+      <a href="#swiss-tossing-system">švajčiarskym systémom</a>,
+      ktorý zabezpečí, že väčšinu zápasov súťaže hrajú lepší hráči s lepšími,
+      strední so strednými a slabší so slabšími. Každým odohratým zápasom sa hráč dostáva
+      k ďalšiemu súperovi, ktorý je mu ešte viac primeraný.
     </p>
     <p class="text-justify">
       Každý hráč odohrá v každom kole jeden zápas, a to v čase, ktorý obom hráčom vyhovuje a na ktorom
-      sa sami telefonicky dohodnú. Na odohratie zápasu v kole majú hráči vždy dva týždne, potom začína ďalšie kolo súťaže.
+      sa sami telefonicky dohodnú. Na odohratie zápasu v kole majú hráči vždy dva týždne, potom začína ďalšie kolo súťaže,
+      kde má každý hráč nového súpera.
     </p>
     <p class="text-justify">
       Zápas sa hrá na dva víťazné sety, pri skóre 1:1 na sety je tretí set supertiebreak do 10 (min. rozdiel musí byť 2 body).
-      Hráči sa pred zápasom môžu dohodnúť, že prípadný tretí set odohrajú štandardným spôsobom.
+      Ak obaja hráči súhlasia a majú dostatok času, môžu sa dohodnúť, že namiesto supertiebreaku odohrajú štandardný set.
     </p>
     <p class="text-justify">
-      Hráč napísaný v zápase ako prvý vyberie, zarezervuje a zaplatí kurt, na ktorom sa zápas odohrá.
+      Hráč napísaný v zápase ako prvý má právo výberu kurtu, na ktorom sa zápas odohrá, tento kurt zarezervuje a zaplatí.
       Hráč napísaný ako druhý prinesie na zápas <strong><u>nové</u></strong> lopty. Každý hráč bude približne rovnaký počet
       krát napísaný ako prvý a druhý. Oficiálnymi loptami súťaže sú Dunlop Fort, Dunlop ATP, Head ATP a Slazenger Wimbledon.
       <strong>Iné lopty možno použiť len so súhlasom súpera</strong>.
-    </p>
-    <p class="text-justify">
-      Každý hráč je na začiatku sezóny zaradený do jednej z piatich kategórií, no počas základnej časti súťaže
-      sa v zápasoch stretávajú hráči všetkých kategórií, podľa spomenutého <a href="#swiss-tossing-system">švajčiarského
-      systému žrebovania</a>.
-      Po skončení základnej časti súťaže bude nasledovať <strong>finálový víkend</strong>,
-      počas ktorého sa stretnú dvaja najvyššie postavení hráči v každej kategórii.
-    </p>
-    <p>Kategórie sú nasledovné</p>
-    <p>
-      <ul>
-        <li>
-          Neregistrovaní (aj registrovaní hráči, ktorí sa registrovali až vo veku viac ako 18 rokov)
-        </li>
-        <li>
-          60 roční a starší
-        </li>
-        <li>
-          50 roční a starší
-        </li>
-        <li>
-          Registrovaní (aj bývalí registrovaní, ktorí mali registráciu vo veku do 18 rokov)
-        </li>
-        <li>
-          Ženy
-        </li>
-      </ul>
     </p>
 
     <h4 class="text-center pt-5" id="pointing-system">Spôsob bodovania</h4>
@@ -84,6 +62,34 @@
       3-bodoví s 3-bodovými. Algoritmus žrebovania takto funguje v každom nasledujúcom kole, pričom opakovaný zápas
       hráčov, ktorí sa v sezóne už stretli je vylúčený. Niekedy sa teda môže stať, že hráčovi už nevychádza rovnako
       bodovaný hráč, no aj tak mu bude pridelený hráč blízkej bodovej úrovne.
+    </p>
+
+    <p class="text-justify">
+      Každý hráč je na začiatku sezóny zaradený do jednej z piatich kategórií, no počas základnej časti súťaže
+      sa v zápasoch stretávajú hráči všetkých kategórií podľa svojej momentálnej bodovej úrovne.
+      Po skončení základnej časti súťaže bude nasledovať <strong>finálový víkend</strong>,
+      počas ktorého sa stretnú dvaja najvyššie postavení hráči v každej kategórii a odohrajú zápas
+      o celkového víťaza svojej kategórie.
+    </p>
+    <p>Kategórie sú nasledovné</p>
+    <p>
+    <ul>
+      <li>
+        Neregistrovaní (aj registrovaní hráči, ktorí sa registrovali až vo veku viac ako 18 rokov)
+      </li>
+      <li>
+        60 roční a starší
+      </li>
+      <li>
+        50 roční a starší
+      </li>
+      <li>
+        Registrovaní (aj bývalí registrovaní, ktorí mali registráciu vo veku do 18 rokov)
+      </li>
+      <li>
+        Ženy
+      </li>
+    </ul>
     </p>
     <hr>
     <p class="text-justify">
