--- a/app/views/pages/season2021.html.erb
+++ b/app/views/pages/season2021.html.erb
@@ -14,9 +14,7 @@
     </h2>
     <p class="text-justify">
       Veríme, že sa tiež už tešíte na začiatok sezóny 2021 a že sa do nej plánujete aktívne zapojiť!
-      Po zimnej prestávke v znamení lockdownu sa žiada si to riadne vynahradiť :-)
-      Prihlásiť sa do tejto sezóny je jednoduché - stačí kontaktovať ktoréhokoľvek z organizátorov
-      a slušne pozdraviť :-)
+      Dúfame, že s oteplením príde aj zmiernenie lockdownu a začneme znova konečne hrať tenis :-)
     </p>
     <div class="row text-center">
       <div class="col-md-6">
@@ -32,7 +30,7 @@
         </p>
       </div>
     </div>
-    <p class="text-center"><i>... no a potom aj zaplatiť štartovné 20€ :-)</i></p>
+
     <%= image_tag "bart_playing_better.png", alt: "Bart Simpson", class: "center-image" %>
 
     <hr>
@@ -46,16 +44,15 @@
       <li class="pt-1">
         <strong>ŽREBOVANIE ZÁPASOV</strong><br>
         Prvé kolo sezóny sa bude žrebovať použitím nasadených hráčov. Počet nasadených hráčov bude
-        určený podľa celkového počtu prihlásených hráčov do sezóny. Ku každému nasadenému hráčovi
-        sa dožrebuje nenasadený súper. Všetky ďalšie zápasy od druhého kola ďalej bude žrebovať
-        výlučne žrebovací algoritmus na základe aktuálneho počtu nahratých bodov v súlade
-        s pravidlami súťaže.
+        určený podľa celkového počtu prihlásených hráčov do sezóny.
+        Presný spôsob vyžrebovania začiatku
+        súťaže bude popísaný na tejto stránke v priebehu apríla.
       </li>
       <li class="pt-1">
         <strong>SÚČET BODOV SÚPEROV</strong><br>
         Z predchádzajúcich skúseností vieme, že hráč, ktorého súper sa zo súťaže odhlásil (najmä v prvej
         polovici sezóny) mohol byť trochu znevýhodnený, pretože v súčte bodov jeho súperov časom začali
-        chýbať potencionálne ďalšie body tohto odhláseného súpera, ktoré tento súper už nevybojoval. Z tohto
+        chýbať potencionálne ďalšie body tohto odhláseného súpera, ktoré on už nevybojoval. Z tohto
         dôvodu, v prípade, že sa hráčov súper zo súťaže odhlásil, budú body tohto odhláseného súpera v tomto súčte
         nahradené priemerným počtom bodov všetkých hráčov v danom kole (zaokrúhleným nadol). K tejto náhrade ale
         dôjde iba v prípade, že je vypočítaný priemer už vyšší ako stihol nahrať tento odhlásený súper.
