--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -157,7 +157,8 @@ ol {
   background-attachment: fixed;
   background-image: url("banner-img2.jpg");
   background-repeat: no-repeat;
-  background-size: auto 50%;
+  background-position: auto;
+  background-size: 100% 100%;
 }
 
 //
