--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -157,8 +157,7 @@ ol {
   background-attachment: fixed;
   background-image: url("banner-img2.jpg");
   background-repeat: no-repeat;
-  background-position: auto;
-  background-size: 100% 100%;
+  background-position: center center;
 }
 
 //
