--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -158,6 +158,7 @@ ol {
   background-image: url("banner-img2.jpg");
   background-repeat: no-repeat;
   background-position: center center;
+  background-size: contain cover;
 }
 
 //
