--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -157,8 +157,8 @@ ol {
   background-attachment: fixed;
   background-image: url("banner-img2.jpg");
   background-repeat: no-repeat;
-  background-position: center center;
-  background-size: contain cover;
+  background-position: center top;
+  //background-size: 100% 192px;
 }
 
 //
