--- a/app/views/pages/game_rules.html.erb
+++ b/app/views/pages/game_rules.html.erb
@@ -49,17 +49,16 @@
         a na adresu jeho spôsobu hry". Toto pravidlo má predchádzať prípadným provokáciám a slovným
         útokom na dvorci. V prípade, že hráč vznesie túto požiadavku svojmu súperovi je súper povinný
         sa ňou riadiť a zdržať sa akéhokoľvek ďalšieho komentára smerujúceho k hráčovi, alebo jeho
-        štýlu hry. Porušenie tohto pravidla bude riešené organizátorom a môže mať za následok
-        diskvalifikáciu súpera v tomto zápase.
+        štýlu hry. Porušenie tohto pravidla môže mať za následok diskvalifikáciu súpera v tomto zápase.
       </li>
       <li>
         Rozprávanie súpera počas výmeny môže znemožňovať koncentráciu hráča na hru. Ak hráčovi prekáža
         prípadne rozprávanie svojho súpera počas výmeny, má právo ho požiadať, aby mu "nebránil v hre
-        rozprávaním". Ak hráč kvôli rozprávaniu súpera počas výmeny stratil bod a upozornil súpera,
-        že to bolo z tohto dôvodu, takto stratený bod sa nezapočítava a lopta sa opakuje. No pri každom
-        nasledovnom porušení tohto pravidla súper stráca bod. Za "bránenie v hre rozprávaním" sa
-        považujú akékoľvek slová súpera vyslovené počas toho, ako lopta v hre letí smerom na hráčovu
-        stranu dvorca.
+        rozprávaním". Za "bránenie v hre rozprávaním" sa považujú slová, alebo rušivé výkriky súpera počas toho,
+        ako lopta v hre letí smerom na hráčovu stranu dvorca. Ak hráč kvôli rozprávaniu súpera
+        počas výmeny stratil bod a upozornil súpera, že to bolo z tohto dôvodu, takto stratený
+        bod sa nezapočítava a lopta sa opakuje. No pri každom nasledovnom porušení tohto
+        pravidla súper stráca bod.
       </li>
     </ol>
 
