--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -211,9 +211,7 @@ ol {
 
 @media only screen and (min-width: 768px) {
   .img-banner {
-    //height: 228px;
-    background-position: center center;
-    background-size: cover;
+    background-size: contain auto;
   }
 
   .narrow {
