--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -155,7 +155,7 @@ ol {
   height: 228px;
   width: 100%;
   background-attachment: fixed;
-  background-image: url("banner-img2.png");
+  background-image: url("banner-img2.jpg");
   background-repeat: no-repeat;
   background-position: center top;
   //background-size: 100% 192px;
@@ -211,7 +211,7 @@ ol {
 
 @media only screen and (min-width: 768px) {
   .img-banner {
-    background-size: contain auto;
+    background-size: contain;
   }
 
   .narrow {
