--- a/app/views/pages/game_rules.html.erb
+++ b/app/views/pages/game_rules.html.erb
@@ -1,87 +1,83 @@
-<div class="row">
-  <div class="col-md-3 hidden-sm-down"></div>
-  <div class="col">
-    <h1 class="display-5 text-center">Súťažný poriadok</h1>
+<div class="center-panel">
+  <h1 class="display-5 text-center">Súťažný poriadok</h1>
 
-    <h3 class="text-center pt-5">
-      Táto súťaž sa riadi nasledovnými pravidlami a tie sú zaväzné pre každého hráča na každom zápase
-      v tejto súťaži. Tieto pravidlá zabezpečujú, aby sa zápasy odohrali férovo voči všetkým
-      zúčastneným hráčom.
-    </h3>
+  <h3 class="text-center pt-5">
+    Táto súťaž sa riadi nasledovnými pravidlami a tie sú zaväzné pre každého hráča na každom zápase
+    v tejto súťaži. Tieto pravidlá zabezpečujú, aby sa zápasy odohrali férovo voči všetkým
+    zúčastneným hráčom.
+  </h3>
 
-    <hr>
-    <h4 class="text-center pt-5">Rozhodovanie zápasov</h4>
-    <ol class="text-justify">
-      <li>
-        Zápasy si rozhodujú hráči sami, pričom sa riadia
-        <a href="https://www.stz.sk/soubory/stp_pravidlatenisu_sj.pdf" target="_blank">
-          platnými pravidlami
-        </a>
-        tenisu.
-        Zápasy sa hrajú na 2 víťazné sety. Tretí, rozhodujúci set sa hrá ako supertiebreak
-        (tiebreak do 10 bodov s rozdielom min. 2 bodov). V prípade, že obaja hráči chcú a majú dostatok
-        času, môžu na rozhodnutie zápasu odohrať klasický set. Ak jeden z hráčov s klasickým
-        setom nesúhlasí, o zápase rozhodne supertiebreak.
-      </li>
-      <li>
-        Hlásenie "out" hlási hráč svojmu súperovi len v prípade, že si je istý, že lopta dopadla mimo dvorec.
-        V prípade, že si hráč nie je istý, či bola lopta "out", lopta sa primárne považuje za "in".
-        V takomto "spornom momente" môže hráč dodatočne ohlásiť "out" iba v prípade, že bezodkladne
-        jasne označí odtlačku po dopade tejto lopty.
-      </li>
-      <li>
-        Hráči sa môžu pred zápasom dohodnúť na rozhodcovi zápasu. Ak obaja hráči (aj nimi zvolený rozhodca)
-        súhlasia, rozhodca potom rozhoduje zápas namiesto hráčov, no musí sa držať platných pravidiel
-        tenisu spomínaných v bode 1.
-      </li>
-      <li>
-        Organizátor súťaže má právo rozhodovať ľubovolný zápas. Ak sa tak rozhodne, v takomto prípade
-        je zápas rozhodovaný organizátorom.
-      </li>
-    </ol>
+  <hr>
+  <h4 class="text-center pt-5">Rozhodovanie zápasov</h4>
+  <ol class="text-justify">
+    <li>
+      Zápasy si rozhodujú hráči sami, pričom sa riadia
+      <a href="https://www.stz.sk/soubory/stp_pravidlatenisu_sj.pdf" target="_blank">
+        platnými pravidlami
+      </a>
+      tenisu.
+      Zápasy sa hrajú na 2 víťazné sety. Tretí, rozhodujúci set sa hrá ako supertiebreak
+      (tiebreak do 10 bodov s rozdielom min. 2 bodov). V prípade, že obaja hráči chcú a majú dostatok
+      času, môžu na rozhodnutie zápasu odohrať klasický set. Ak jeden z hráčov s klasickým
+      setom nesúhlasí, o zápase rozhodne supertiebreak.
+    </li>
+    <li>
+      Hlásenie "out" hlási hráč svojmu súperovi len v prípade, že si je istý, že lopta dopadla mimo dvorec.
+      V prípade, že si hráč nie je istý, či bola lopta "out", lopta sa primárne považuje za "in".
+      V takomto "spornom momente" môže hráč dodatočne ohlásiť "out" iba v prípade, že bezodkladne
+      jasne označí odtlačku po dopade tejto lopty.
+    </li>
+    <li>
+      Hráči sa môžu pred zápasom dohodnúť na rozhodcovi zápasu. Ak obaja hráči (aj nimi zvolený rozhodca)
+      súhlasia, rozhodca potom rozhoduje zápas namiesto hráčov, no musí sa držať platných pravidiel
+      tenisu spomínaných v bode 1.
+    </li>
+    <li>
+      Organizátor súťaže má právo rozhodovať ľubovolný zápas. Ak sa tak rozhodne, v takomto prípade
+      je zápas rozhodovaný organizátorom.
+    </li>
+  </ol>
 
-    <hr>
-    <h4 class="text-center pt-5">Správanie sa na dvorci</h4>
-    <%= image_tag "bart_fair_play.png", alt: "Bart Simpson", class: "center-image" %>
-    <ol class="text-justify">
-      <li>
-        Hráč má právo počas zápasu požiadať svojho súpera, aby sa "nevyjadroval na jeho adresu
-        a na adresu jeho spôsobu hry". Toto pravidlo má predchádzať prípadným provokáciám a slovným
-        útokom na dvorci. V prípade, že hráč vznesie túto požiadavku svojmu súperovi je súper povinný
-        sa ňou riadiť a zdržať sa akéhokoľvek ďalšieho komentára smerujúceho k hráčovi, alebo jeho
-        štýlu hry. Porušenie tohto pravidla môže mať za následok diskvalifikáciu súpera v tomto zápase.
-      </li>
-      <li>
-        Rozprávanie súpera počas výmeny môže znemožňovať koncentráciu hráča na hru. Ak hráčovi prekáža
-        prípadne rozprávanie svojho súpera počas výmeny, má právo ho požiadať, aby mu "nebránil v hre
-        rozprávaním". Za "bránenie v hre rozprávaním" sa považujú slová, alebo rušivé výkriky súpera počas toho,
-        ako lopta v hre letí smerom na hráčovu stranu dvorca. Ak hráč kvôli rozprávaniu súpera
-        počas výmeny stratil bod a upozornil súpera, že to bolo z tohto dôvodu, takto stratený
-        bod sa nezapočítava a lopta sa opakuje. No pri každom nasledovnom porušení tohto
-        pravidla súper stráca bod.
-      </li>
-    </ol>
+  <hr>
+  <h4 class="text-center pt-5">Správanie sa na dvorci</h4>
+  <%= image_tag "bart_fair_play.png", alt: "Bart Simpson", class: "center-image" %>
+  <ol class="text-justify">
+    <li>
+      Hráč má právo počas zápasu požiadať svojho súpera, aby sa "nevyjadroval na jeho adresu
+      a na adresu jeho spôsobu hry". Toto pravidlo má predchádzať prípadným provokáciám a slovným
+      útokom na dvorci. V prípade, že hráč vznesie túto požiadavku svojmu súperovi je súper povinný
+      sa ňou riadiť a zdržať sa akéhokoľvek ďalšieho komentára smerujúceho k hráčovi, alebo jeho
+      štýlu hry. Porušenie tohto pravidla môže mať za následok diskvalifikáciu súpera v tomto zápase.
+    </li>
+    <li>
+      Rozprávanie súpera počas výmeny môže znemožňovať koncentráciu hráča na hru. Ak hráčovi prekáža
+      prípadne rozprávanie svojho súpera počas výmeny, má právo ho požiadať, aby mu "nebránil v hre
+      rozprávaním". Za "bránenie v hre rozprávaním" sa považujú slová, alebo rušivé výkriky súpera počas toho,
+      ako lopta v hre letí smerom na hráčovu stranu dvorca. Ak hráč kvôli rozprávaniu súpera
+      počas výmeny stratil bod a upozornil súpera, že to bolo z tohto dôvodu, takto stratený
+      bod sa nezapočítava a lopta sa opakuje. No pri každom nasledovnom porušení tohto
+      pravidla súper stráca bod.
+    </li>
+  </ol>
 
-    <hr>
-    <h4 class="text-center pt-5">Meškanie na zápas</h4>
-    <ol class="text-justify">
-      <li>
-        V prípade ak sa hráči nedohodnú inak a súper prítomného hráča mešká na zápas viac ako 15 minút,
-        tento zápas je považovaný za skrečovaný súperom.
-      </li>
-    </ol>
+  <hr>
+  <h4 class="text-center pt-5">Meškanie na zápas</h4>
+  <ol class="text-justify">
+    <li>
+      V prípade ak sa hráči nedohodnú inak a súper prítomného hráča mešká na zápas viac ako 15 minút,
+      tento zápas je považovaný za skrečovaný súperom.
+    </li>
+  </ol>
 
-    <hr>
-    <h4 class="text-center pt-5">Opustenie dvorca</h4>
-    <ol class="text-justify">
-      <li>
-        Odchádzanie od rozohratého zápasu je primárne na dohode hráčov. No ak sa hráči nevedia dohodnúť,
-        opustenie dvorca je každému z hráčov povolené najviac 1x za štandardný set (alebo po jeho
-        skončení) na najviac 5 minút, ale nie počas rozohratej hry. V prípade, že hráč opustí dvorec
-        v rozpore s týmto pravidlom a zároveň bez dohody so súperom, považuje sa to za skrečovanie
-        zápasu hráčom.
-      </li>
-    </ol>
-  </div>
-  <div class="col-md-3 hidden-sm-down"></div>
+  <hr>
+  <h4 class="text-center pt-5">Opustenie dvorca</h4>
+  <ol class="text-justify">
+    <li>
+      Odchádzanie od rozohratého zápasu je primárne na dohode hráčov. No ak sa hráči nevedia dohodnúť,
+      opustenie dvorca je každému z hráčov povolené najviac 1x za štandardný set (alebo po jeho
+      skončení) na najviac 5 minút, ale nie počas rozohratej hry. V prípade, že hráč opustí dvorec
+      v rozpore s týmto pravidlom a zároveň bez dohody so súperom, považuje sa to za skrečovanie
+      zápasu hráčom.
+    </li>
+  </ol>
 </div>
