--- a/app/views/rounds/edit.html.erb
+++ b/app/views/rounds/edit.html.erb
@@ -1,15 +1,11 @@
-<div class="row">
-  <div class="col-md-3 hidden-sm-down"></div>
-  <div class="col">
-    <h2><%= @heading %></h2>
-    <hr>
-    <div class="row">
-      <div class="col">
-        <%= "Pozícia v sezóne - #{@round.position}" %>
-      </div>
+<div class="center-panel">
+  <h2><%= @heading %></h2>
+  <hr>
+  <div class="row">
+    <div class="col">
+      <%= "Pozícia v sezóne - #{@round.position}" %>
     </div>
-    <hr>
-    <%= render 'form', round: @round %>
   </div>
-  <div class="col-md-3 hidden-sm-down"></div>
+  <hr>
+  <%= render 'form', round: @round %>
 </div>
