--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,9 +1,5 @@
-<div class="row">
-  <div class="col-md-3 hidden-sm-down"></div>
-  <div class="col">
-    <h2><%= @heading %></h2>
-    <hr>
-    <%= render 'form', category: @category %>
-  </div>
-  <div class="col-md-3 hidden-sm-down"></div>
+<div class="center-panel">
+  <h2><%= @heading %></h2>
+  <hr>
+  <%= render 'form', category: @category %>
 </div>
