--- a/app/views/matches/new.html.erb
+++ b/app/views/matches/new.html.erb
@@ -1,88 +1,84 @@
-<div class="row">
-  <div class="col-md-3 hidden-sm-down"></div>
-  <div class="col">
-    <h2><%= "Nový zápas, #{@round.full_label}" %></h2>
-    <hr>
+<div class="center-panel">
+  <h2><%= "Nový zápas, #{@round.full_label}" %></h2>
+  <hr>
 
-    <%= render 'shared/validation_errors_announcement', validated_object: @match %>
-    <%= form_with(model: @match, local: true) do |form| %>
-      <div class="row">
-        <div class="col-lg-6">
-          <div class="<%= add_error_class_to('pl-2', @match, :player1) %>">
-            <div class="form-group">
-              <%= form.label :player1_id, 'Hráč 1 - kurt' %><br />
-              <%= form.collection_select :player1_id, @available_players, :id, :name, { include_blank: 'Žiadny hráč' }, { class: 'form-control' } %>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="<%= add_error_class_to('pl-2', @match, :player2) %>">
-            <div class="form-group">
-              <%= form.label :player2_id, 'Hráč 2 - lopty' %><br />
-              <%= form.collection_select :player2_id, @available_players, :id, :name, { include_blank: 'Žiadny hráč' }, { class: 'form-control' } %>
-            </div>
+  <%= render 'shared/validation_errors_announcement', validated_object: @match %>
+  <%= form_with(model: @match, local: true) do |form| %>
+    <div class="row">
+      <div class="col-lg-6">
+        <div class="<%= add_error_class_to('pl-2', @match, :player1) %>">
+          <div class="form-group">
+            <%= form.label :player1_id, 'Hráč 1 - kurt' %><br />
+            <%= form.collection_select :player1_id, @available_players, :id, :name, { include_blank: 'Žiadny hráč' }, { class: 'form-control' } %>
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-lg-6">
-          <div class="pl-2">
-            <div class="form-group">
-              <%= form.label :play_date, 'Dátum' %>
-              <%= button_tag 'zrušiť dátum', type: 'button', class: 'btn btn-sm btn-warning float-right', id: 'cancel-date-btn' %>
-              <br/>
-              <%= form.date_field :play_date, class: 'form-control' %>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="pl-2">
-            <div class="form-group">
-              <%= form.label :play_time, 'Čas' %><br />
-              <%= form.select :play_time, Match.play_times.keys, { include_blank: "Žiadny čas" }, { class: "form-control" } %>
-            </div>
+      <div class="col-lg-6">
+        <div class="<%= add_error_class_to('pl-2', @match, :player2) %>">
+          <div class="form-group">
+            <%= form.label :player2_id, 'Hráč 2 - lopty' %><br />
+            <%= form.collection_select :player2_id, @available_players, :id, :name, { include_blank: 'Žiadny hráč' }, { class: 'form-control' } %>
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-lg-6">
-          <div class="pl-2">
-            <div class="form-group">
-              <%= form.label :place, "Miesto" %>
-              <%= form.select :place_id, options_from_collection_for_select(Place.all, :id, :name), { include_blank: 'Žiadne miesto' }, { class: 'form-control new-player-control' } %>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="custom-control custom-checkbox pl-2">
-            <br><br>
-            <%= form.check_box :published, class: 'custom-control-input' %>
-            <%= form.label :published, 'Zápas je zverejnený', class: 'custom-control-label' %>
+    </div>
+    <div class="row">
+      <div class="col-lg-6">
+        <div class="pl-2">
+          <div class="form-group">
+            <%= form.label :play_date, 'Dátum' %>
+            <%= button_tag 'zrušiť dátum', type: 'button', class: 'btn btn-sm btn-warning float-right', id: 'cancel-date-btn' %>
+            <br/>
+            <%= form.date_field :play_date, class: 'form-control' %>
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-12">
-          <div class="form-group pl-2">
-            <%= form.label :note, 'Poznámka' %>
-            <%= form.text_area :note, class: 'form-control' %>
+      <div class="col-lg-6">
+        <div class="pl-2">
+          <div class="form-group">
+            <%= form.label :play_time, 'Čas' %><br />
+            <%= form.select :play_time, Match.play_times.keys, { include_blank: "Žiadny čas" }, { class: "form-control" } %>
           </div>
         </div>
       </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-6">
+        <div class="pl-2">
+          <div class="form-group">
+            <%= form.label :place, "Miesto" %>
+            <%= form.select :place_id, options_from_collection_for_select(Place.all, :id, :name), { include_blank: 'Žiadne miesto' }, { class: 'form-control new-player-control' } %>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6">
+        <div class="custom-control custom-checkbox pl-2">
+          <br><br>
+          <%= form.check_box :published, class: 'custom-control-input' %>
+          <%= form.label :published, 'Zápas je zverejnený', class: 'custom-control-label' %>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <div class="form-group pl-2">
+          <%= form.label :note, 'Poznámka' %>
+          <%= form.text_area :note, class: 'form-control' %>
+        </div>
+      </div>
+    </div>
 
-      <%= form.hidden_field :round_id %>
+    <%= form.hidden_field :round_id %>
 
-      <div class="row">
-        <div class="col">
-          <div class="actions pl-2">
-            <%= submit_tag 'Potvrdiť', class: 'btn btn-lg btn-success my-1' %>
-            <%= link_to 'Zrušiť', round_path(@round), class: 'btn btn-lg btn-outline-success my-1' %>
-          </div>
+    <div class="row">
+      <div class="col">
+        <div class="actions pl-2">
+          <%= submit_tag 'Potvrdiť', class: 'btn btn-lg btn-success my-1' %>
+          <%= link_to 'Zrušiť', round_path(@round), class: 'btn btn-lg btn-outline-success my-1' %>
         </div>
       </div>
-    <% end %>
-  </div>
-  <div class="col-md-3 hidden-sm-down"></div>
+    </div>
+  <% end %>
 </div>
 
 <%= render 'matches/scripts' %>
