--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,120 +1,116 @@
-<div class="row">
-  <div class="col-md-3 hidden-sm-down"></div>
-  <div class="col">
-    <h1 class="display-5 text-center">Majstrovstvá Topoľčian v tenise</h1>
+<div class="center-panel">
+  <h1 class="display-5 text-center">Majstrovstvá Topoľčian v tenise</h1>
 
-    <h3 class="text-center pt-5">
-      Súťaž je určená pre každého, kto si chce zahrať tenis s vyrovnanými súpermi
-      počas celej letnej sezóny, na ktorýchkoľvek kurtoch v Topoľčanoch.
-    </h3>
+  <h3 class="text-center pt-5">
+    Súťaž je určená pre každého, kto si chce zahrať tenis s vyrovnanými súpermi
+    počas celej letnej sezóny, na ktorýchkoľvek kurtoch v Topoľčanoch.
+  </h3>
 
-    <hr>
-    <h4 class="text-center pt-5">Princíp súťaže</h4>
-    <p class="text-justify">
-      Základná časť majstrovstiev pozostáva z minimálne deviatich hracích kol,
-      pričom každé kolo trvá dva týždne.
-      Jednotlivé kolá základnej časti súťaže sa žrebujú
-      <a href="#swiss-tossing-system">švajčiarskym systémom</a>,
-      ktorý zabezpečí, že väčšinu zápasov súťaže hrajú lepší hráči s lepšími,
-      strední so strednými a slabší so slabšími. Každým odohratým zápasom sa hráč dostáva
-      k ďalšiemu súperovi, ktorý je mu ešte viac primeraný.
-    </p>
-    <p class="text-justify">
-      Každý hráč odohrá v každom kole jeden zápas, a to v čase, ktorý obom hráčom vyhovuje a na ktorom
-      sa sami telefonicky dohodnú. Na odohratie zápasu v kole majú hráči vždy dva týždne, potom začína ďalšie kolo súťaže,
-      kde má každý hráč nového súpera.
-    </p>
-    <p class="text-justify">
-      Zápas sa hrá na dva víťazné sety, pri skóre 1:1 na sety je tretí set supertiebreak do 10 (min. rozdiel musí byť 2 body).
-      Ak obaja hráči súhlasia a majú dostatok času, môžu sa dohodnúť, že namiesto supertiebreaku odohrajú štandardný set.
-    </p>
-    <p class="text-justify">
-      Hráč napísaný v zápase ako prvý má právo výberu kurtu, na ktorom sa zápas odohrá, tento kurt zarezervuje a zaplatí.
-      Hráč napísaný ako druhý prinesie na zápas <strong><u>nové</u></strong> lopty. Každý hráč bude približne rovnaký počet
-      krát napísaný ako prvý a druhý. Oficiálnymi loptami súťaže sú Dunlop Fort, Dunlop ATP, Head ATP a Slazenger Wimbledon.
-      <strong>Iné lopty možno použiť len so súhlasom súpera</strong>.
-    </p>
+  <hr>
+  <h4 class="text-center pt-5">Princíp súťaže</h4>
+  <p class="text-justify">
+    Základná časť majstrovstiev pozostáva z minimálne deviatich hracích kol,
+    pričom každé kolo trvá dva týždne.
+    Jednotlivé kolá základnej časti súťaže sa žrebujú
+    <a href="#swiss-tossing-system">švajčiarskym systémom</a>,
+    ktorý zabezpečí, že väčšinu zápasov súťaže hrajú lepší hráči s lepšími,
+    strední so strednými a slabší so slabšími. Každým odohratým zápasom sa hráč dostáva
+    k ďalšiemu súperovi, ktorý je mu ešte viac primeraný.
+  </p>
+  <p class="text-justify">
+    Každý hráč odohrá v každom kole jeden zápas, a to v čase, ktorý obom hráčom vyhovuje a na ktorom
+    sa sami telefonicky dohodnú. Na odohratie zápasu v kole majú hráči vždy dva týždne, potom začína ďalšie kolo súťaže,
+    kde má každý hráč nového súpera.
+  </p>
+  <p class="text-justify">
+    Zápas sa hrá na dva víťazné sety, pri skóre 1:1 na sety je tretí set supertiebreak do 10 (min. rozdiel musí byť 2 body).
+    Ak obaja hráči súhlasia a majú dostatok času, môžu sa dohodnúť, že namiesto supertiebreaku odohrajú štandardný set.
+  </p>
+  <p class="text-justify">
+    Hráč napísaný v zápase ako prvý má právo výberu kurtu, na ktorom sa zápas odohrá, tento kurt zarezervuje a zaplatí.
+    Hráč napísaný ako druhý prinesie na zápas <strong><u>nové</u></strong> lopty. Každý hráč bude približne rovnaký počet
+    krát napísaný ako prvý a druhý. Oficiálnymi loptami súťaže sú Dunlop Fort, Dunlop ATP, Head ATP a Slazenger Wimbledon.
+    <strong>Iné lopty možno použiť len so súhlasom súpera</strong>.
+  </p>
 
-    <h4 class="text-center pt-5" id="pointing-system">Spôsob bodovania</h4>
-    <p class="text-justify">
-      V každom zápase sa hrá o 3 body. V prípade výsledku 2:0 na sety sa body rozdelujú v pomere 3:0 v prospech víťaza.
-      V prípade výsledku 2:1 sa body rozdelujú v pomere 2:1 v prospech víťaza.
-    </p>
-    <p class="text-justify">
-      Hráči sú priebežne zoraďovaní do rebríčka, ktorý sa mení každým odohratým zápasom. Zoradenie hráčov v rámci aktuálne
-      zvoleného kola je dané <strong>dvomi hlavnými kritériami</strong> a to je: 1) počet bodov získaných do tohto kola (vrátane)
-      a 2) súčet bodov hráčových súperov po dané kolo (vrátane).
-    </p>
+  <h4 class="text-center pt-5" id="pointing-system">Spôsob bodovania</h4>
+  <p class="text-justify">
+    V každom zápase sa hrá o 3 body. V prípade výsledku 2:0 na sety sa body rozdelujú v pomere 3:0 v prospech víťaza.
+    V prípade výsledku 2:1 sa body rozdelujú v pomere 2:1 v prospech víťaza.
+  </p>
+  <p class="text-justify">
+    Hráči sú priebežne zoraďovaní do rebríčka, ktorý sa mení každým odohratým zápasom. Zoradenie hráčov v rámci aktuálne
+    zvoleného kola je dané <strong>dvomi hlavnými kritériami</strong> a to je: 1) počet bodov získaných do tohto kola (vrátane)
+    a 2) súčet bodov hráčových súperov po dané kolo (vrátane).
+  </p>
 
-    <h4 class="text-center pt-5" id="swiss-tossing-system">Švajčiarsky systém žrebovania</h4>
-    <p class="text-justify">
-      Tento systém žrebovania je založený na tom, že v každom kole sa vyžrebujú súperi,
-      ktorí majú aktuálne rovnaký alebo približne rovnaký počet bodov.
-    </p>
-    <p class="text-justify">
-      Žrebovanie prvého kola - všetci hráči majú pred vyžrebovaním prvého kola 0 bodov.
-      Počítač vyžrebuje dvojice súperov, pričom v tomto prvom kole sa stretnú aj
-      hráči rôznych herných úrovní.
-    </p>
-    <p class="text-justify">
-      Žrebovanie druhého kola - hráči majú aktuálne 0 až 3 body podľa výsledku svojho zápasu v 1. kole.
-      Počítač vyžrebuje hráčov tak, aby 0-bodoví hrali s 0-bodovými, 1-bodoví s 1-bodovými, 2-bodoví s 2-bodovými a
-      3-bodoví s 3-bodovými. Algoritmus žrebovania takto funguje v každom nasledujúcom kole, pričom opakovaný zápas
-      hráčov, ktorí sa v sezóne už stretli je vylúčený. Niekedy sa teda môže stať, že hráčovi už nevychádza rovnako
-      bodovaný hráč, no aj tak mu bude pridelený hráč blízkej bodovej úrovne.
-    </p>
+  <h4 class="text-center pt-5" id="swiss-tossing-system">Švajčiarsky systém žrebovania</h4>
+  <p class="text-justify">
+    Tento systém žrebovania je založený na tom, že v každom kole sa vyžrebujú súperi,
+    ktorí majú aktuálne rovnaký alebo približne rovnaký počet bodov.
+  </p>
+  <p class="text-justify">
+    Žrebovanie prvého kola - všetci hráči majú pred vyžrebovaním prvého kola 0 bodov.
+    Počítač vyžrebuje dvojice súperov, pričom v tomto prvom kole sa stretnú aj
+    hráči rôznych herných úrovní.
+  </p>
+  <p class="text-justify">
+    Žrebovanie druhého kola - hráči majú aktuálne 0 až 3 body podľa výsledku svojho zápasu v 1. kole.
+    Počítač vyžrebuje hráčov tak, aby 0-bodoví hrali s 0-bodovými, 1-bodoví s 1-bodovými, 2-bodoví s 2-bodovými a
+    3-bodoví s 3-bodovými. Algoritmus žrebovania takto funguje v každom nasledujúcom kole, pričom opakovaný zápas
+    hráčov, ktorí sa v sezóne už stretli je vylúčený. Niekedy sa teda môže stať, že hráčovi už nevychádza rovnako
+    bodovaný hráč, no aj tak mu bude pridelený hráč blízkej bodovej úrovne.
+  </p>
 
-    <p class="text-justify">
-      Každý hráč je na začiatku sezóny zaradený do jednej z piatich kategórií, no počas základnej časti súťaže
-      sa v zápasoch stretávajú hráči všetkých kategórií podľa svojej momentálnej bodovej úrovne.
-      Po skončení základnej časti súťaže bude nasledovať <strong>finálový víkend</strong>,
-      počas ktorého sa stretnú dvaja najvyššie postavení hráči v každej kategórii a odohrajú zápas
-      o celkového víťaza svojej kategórie.
-    </p>
-    <p>Kategórie sú nasledovné</p>
-    <p>
-    <ul>
-      <li>
-        Neregistrovaní (aj registrovaní hráči, ktorí sa registrovali až vo veku viac ako 18 rokov)
-      </li>
-      <li>
-        60 roční a starší
-      </li>
-      <li>
-        50 roční a starší
-      </li>
-      <li>
-        Registrovaní (aj bývalí registrovaní, ktorí mali registráciu vo veku do 18 rokov)
-      </li>
-      <li>
-        Ženy
-      </li>
-    </ul>
-    </p>
-    <hr>
-    <p class="text-justify">
-      <i>
-        Organizátor súťaže môže pre zatraktívnenie, alebo zefektívnenie súťaže urobiť výnimky v žrebovaní, alebo
-        priraďovaní hráčov na zápasy, ak si to situácia z nejakých dôvodov vyžaduje. <s>Prvé a druhé kolo súťaže bude žrebované
-        ťahaním lístočkov so zapojením všetkých prítomných hráčov.</s>
-      </i>
-    </p>
+  <p class="text-justify">
+    Každý hráč je na začiatku sezóny zaradený do jednej z piatich kategórií, no počas základnej časti súťaže
+    sa v zápasoch stretávajú hráči všetkých kategórií podľa svojej momentálnej bodovej úrovne.
+    Po skončení základnej časti súťaže bude nasledovať <strong>finálový víkend</strong>,
+    počas ktorého sa stretnú dvaja najvyššie postavení hráči v každej kategórii a odohrajú zápas
+    o celkového víťaza svojej kategórie.
+  </p>
+  <p>Kategórie sú nasledovné</p>
+  <p>
+  <ul>
+    <li>
+      Neregistrovaní (aj registrovaní hráči, ktorí sa registrovali až vo veku viac ako 18 rokov)
+    </li>
+    <li>
+      60 roční a starší
+    </li>
+    <li>
+      50 roční a starší
+    </li>
+    <li>
+      Registrovaní (aj bývalí registrovaní, ktorí mali registráciu vo veku do 18 rokov)
+    </li>
+    <li>
+      Ženy
+    </li>
+  </ul>
+  </p>
+  <hr>
+  <p class="text-justify">
+    <i>
+      Organizátor súťaže môže pre zatraktívnenie, alebo zefektívnenie súťaže urobiť výnimky v žrebovaní, alebo
+      priraďovaní hráčov na zápasy, ak si to situácia z nejakých dôvodov vyžaduje. <s>Prvé a druhé kolo súťaže bude žrebované
+      ťahaním lístočkov so zapojením všetkých prítomných hráčov.</s>
+    </i>
+  </p>
 
-    <hr>
-    <h3 class="text-center py-5">
-      Každý hráč tejto súťaže sa zaväzuje, že bude dodržiavať
-      <%= link_to "Súťažný poriadok", pages_game_rules_path %>
-    </h3>
+  <hr>
+  <h3 class="text-center py-5">
+    Každý hráč tejto súťaže sa zaväzuje, že bude dodržiavať
+    <%= link_to "Súťažný poriadok", pages_game_rules_path %>
+  </h3>
 
-    <hr>
+  <hr>
 
-    <h4 class="text-center pt-5">Viac info a prihlásenie</h4>
-    <p class="text-center">
-      Tomáš Radič ● <strong><%= link_to '0905 289 248', 'tel:0905289248' %></strong><br>
-      Ondrej Babala ● <strong><%= link_to_manager_phone %></strong><br>
-      <%= link_to root_url, root_url %><br>
-      <%= link_to 'matotenis@yahoo.com', 'mailto:matotenis@yahoo.com' %>
-    </p>
-  </div>
-  <div class="col-md-3 hidden-sm-down"></div>
+  <h4 class="text-center pt-5">Viac info a prihlásenie</h4>
+  <p class="text-center">
+    Tomáš Radič ● <strong><%= link_to '0905 289 248', 'tel:0905289248' %></strong><br>
+    Ondrej Babala ● <strong><%= link_to_manager_phone %></strong><br>
+    <%= link_to root_url, root_url %><br>
+    <%= link_to 'matotenis@yahoo.com', 'mailto:matotenis@yahoo.com' %>
+  </p>
 </div>
