--- a/app/views/pages/season2020.html.erb
+++ b/app/views/pages/season2020.html.erb
@@ -1,54 +1,50 @@
-<div class="row">
-  <div class="col-md-3 hidden-sm-down"></div>
-  <div class="col">
-    <h1 class="display-3 text-center">
-      Začína sezóna <strong>2020!</strong>
-    </h1>
+<div class="center-panel">
+  <h1 class="display-3 text-center">
+    Začína sezóna <strong>2020!</strong>
+  </h1>
 
-    <hr>
-    <h2 class="text-center pt-5">
-      Ahojte tenisti!
+  <hr>
+  <h2 class="text-center pt-5">
+    Ahojte tenisti!
+  </h2>
+  <p class="text-justify lead">
+    Po vydarenom prvom ročníku tejto súťaže prichádza čas otvoriť
+    ďalšiu sezónu a pokračovať v napínavých dvojtýždňových letných zápoleniach!
+    Veríme, že ste si minulú sezónu dobre zahrali a tiež sa už neviete dočkať
+    prvého outdoorového úderu v tomto roku :-)
+  </p>
+  <div class="p-4 bg-yellow">
+    <h2 class="text-center">
+      Vírus vedie 2:0 v prvom sete :-/
     </h2>
     <p class="text-justify lead">
-      Po vydarenom prvom ročníku tejto súťaže prichádza čas otvoriť
-      ďalšiu sezónu a pokračovať v napínavých dvojtýždňových letných zápoleniach!
-      Veríme, že ste si minulú sezónu dobre zahrali a tiež sa už neviete dočkať
-      prvého outdoorového úderu v tomto roku :-)
-    </p>
-    <div class="p-4 bg-yellow">
-      <h2 class="text-center">
-        Vírus vedie 2:0 v prvom sete :-/
-      </h2>
-      <p class="text-justify lead">
-        Ako asi tušíte, v súčasnej dobe nevieme s istotou povedať, ako sa vyvinie
-        situácia ohľadom pandémie Corona vírusu a kedy nám bude umožnené spustiť
-        prihlasovanie a následne súťaž samotnú. Akonáhle sa bude dať situácia
-        odhadnúť, budeme vás informovať emailom a rovnako nájdete všetky informácie
-        tu, na stránke súťaže. Veríme, že ak všetci budú zodpovední a budú dodržovať
-        nekompromisné izolačné opatrenia, budeme môcť začať čím skôr.
-        Kurty sa už pripravujú a budú na vás čakať.
-      </p>
-    </div>
-    <p class="text-justify lead mt-3">
-      Telefónne číslo na hlavného organizátora - Ondreja Babalu
-      je <%= link_to_manager_phone %>, prípadne email
-      <%= link_to 'matotenis@yahoo.com', 'mailto:matotenis@yahoo.com' %>.
-    </p>
-
-    <p class="text-justify lead">
-      Všetky informácie nájdete na <%= link_to "stránke o súťaži", pages_about_path %>.
-      Novinkou tohto ročníka je
-      <%= link_to "zmena bodovania", "#{pages_about_path}#pointing-system", target: :_blank %>.
-      Tešíme sa na skoré stretnutie v tenisovom klube v parku, kde bude prebiehať
-      aj prvé vyžrebovanie :-)
-    </p>
-
-    <h2 class="text-center pt-5">Viac info a prihlásenie</h2>
-    <p class="text-center">
-      Ondrej Babala ● <strong><%= link_to_manager_phone %></strong><br>
-      <%= link_to root_url, root_url %><br>
-      <%= link_to 'matotenis@yahoo.com', 'mailto:matotenis@yahoo.com' %>
+      Ako asi tušíte, v súčasnej dobe nevieme s istotou povedať, ako sa vyvinie
+      situácia ohľadom pandémie Corona vírusu a kedy nám bude umožnené spustiť
+      prihlasovanie a následne súťaž samotnú. Akonáhle sa bude dať situácia
+      odhadnúť, budeme vás informovať emailom a rovnako nájdete všetky informácie
+      tu, na stránke súťaže. Veríme, že ak všetci budú zodpovední a budú dodržovať
+      nekompromisné izolačné opatrenia, budeme môcť začať čím skôr.
+      Kurty sa už pripravujú a budú na vás čakať.
     </p>
   </div>
-  <div class="col-md-3 hidden-sm-down"></div>
+  <p class="text-justify lead mt-3">
+    Telefónne číslo na hlavného organizátora - Ondreja Babalu
+    je <%= link_to_manager_phone %>, prípadne email
+    <%= link_to 'matotenis@yahoo.com', 'mailto:matotenis@yahoo.com' %>.
+  </p>
+
+  <p class="text-justify lead">
+    Všetky informácie nájdete na <%= link_to "stránke o súťaži", pages_about_path %>.
+    Novinkou tohto ročníka je
+    <%= link_to "zmena bodovania", "#{pages_about_path}#pointing-system", target: :_blank %>.
+    Tešíme sa na skoré stretnutie v tenisovom klube v parku, kde bude prebiehať
+    aj prvé vyžrebovanie :-)
+  </p>
+
+  <h2 class="text-center pt-5">Viac info a prihlásenie</h2>
+  <p class="text-center">
+    Ondrej Babala ● <strong><%= link_to_manager_phone %></strong><br>
+    <%= link_to root_url, root_url %><br>
+    <%= link_to 'matotenis@yahoo.com', 'mailto:matotenis@yahoo.com' %>
+  </p>
 </div>
