--- a/app/views/rounds/new.html.erb
+++ b/app/views/rounds/new.html.erb
@@ -1,9 +1,5 @@
-<div class="row">
-  <div class="col-md-3 hidden-sm-down"></div>
-  <div class="col">
-    <h2>Nové kolo</h2>
-    <hr>
-    <%= render 'form', round: @round %>
-  </div>
-  <div class="col-md-3 hidden-sm-down"></div>
+<div class="center-panel">
+  <h2>Nové kolo</h2>
+  <hr>
+  <%= render 'form', round: @round %>
 </div>
