Changed text on page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -46,8 +46,9 @@
 
   <h4 class="text-center pt-5" id="swiss-tossing-system">Švajčiarsky systém žrebovania</h4>
   <p class="text-justify">
-    Tento systém žrebovania je založený na tom, že v každom kole sa vyžrebujú súperi,
-    ktorí majú aktuálne rovnaký alebo približne rovnaký počet bodov.
+    Toto žrebovanie je založené na tom, že v každom kole systém žrebuje súperov k sebe podľa
+    rovnosti, alebo aspoň podobnosti ich bodovej úrovne v čase žrebovania. Vyžrebujú sa tak vždy dvojice,
+    ktoré majú aktuálne rovnaký alebo približne rovnaký počet bodov.
   </p>
   <p class="text-justify">
     Žrebovanie prvého kola - všetci hráči majú pred vyžrebovaním prvého kola 0 bodov.
