Added placeholder to date fields

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -27,7 +27,7 @@
           <span data-toggle="tooltip" data-placement="left", title="Ak je tento dátum vyplnený, tento článok sa po tomto dátume už nebude zobrazovať ako 'Novinka' na stránke zápasov a stránke rebríčka">
             <%= fa_icon 'question-circle' %>
           </span>
-          <%= form.date_field :last_date_interesting, class: 'form-control' %>
+          <%= form.date_field :last_date_interesting, class: 'form-control', placeholder: 'yyyy-mm-dd' %>
         </div>
       </div>
     </div>
