--- a/app/views/rounds/_form.html.erb
+++ b/app/views/rounds/_form.html.erb
@@ -6,13 +6,13 @@
     <div class="col-lg-6">
       <div class="field form-group">
         <%= form.label :period_begins, 'Začiatok' %><br />
-        <%= form.date_field :period_begins, class: 'form-control' %>
+        <%= form.date_field :period_begins, class: 'form-control', placeholder: 'yyyy-mm-dd' %>
       </div>
     </div>
     <div class="col-lg-6">
       <div class="field form-group">
         <%= form.label :period_ends, 'Koniec' %><br />
-        <%= form.date_field :period_ends, class: 'form-control' %>
+        <%= form.date_field :period_ends, class: 'form-control', placeholder: 'yyyy-mm-dd' %>
       </div>
     </div>
   </div>
