--- a/app/views/matches/new.html.erb
+++ b/app/views/matches/new.html.erb
@@ -29,7 +29,7 @@
             <%= form.label :play_date, 'Dátum' %>
             <%= button_tag 'zrušiť dátum', type: 'button', class: 'btn btn-sm btn-warning float-right', id: 'cancel-date-btn' %>
             <br/>
-            <%= form.date_field :play_date, class: 'form-control' %>
+            <%= form.date_field :play_date, class: 'form-control', placeholder: 'yyyy-mm-dd' %>
           </div>
         </div>
       </div>
