--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -12,3 +12,9 @@ $gray: #eceaea;
 
 $mainbg: #F1F3F4;
 $navbg: #C23B22;
+
+$greenbg: #bcf7c5;
+$greenbg_darken: darken($greenbg, 6);
+$yellowbg: #f5e1a6;
+$yellowbg_darken: darken($yellowbg, 6);
+$dark_gray: #7b7878;
